[project]
name = "asn2rflx"
version = ""
description = ""
authors = [{ name = "rami3l", email = "rami3l@outlook.com" }]
dependencies = [
    "asn1tools>=0.161.0",
    "setuptools>=62.1.0",
    "more-itertools>=8.12.0",
    "coloredlogs>=15.0.1",
    "RecordFlux @ git+https://github.com/Componolit/RecordFlux",
    "frozendict>=2.3.2",
]

requires-python = ">=3.9"
license = { text = "MIT" }
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "pytest>=7.1.1",
    "pydbg>=0.3.0",
    "mypy>=0.942",
    "pytest-xdist[psutil]>=2.5.0",
    "pytest-profiling>=1.7.0",
    "hypothesis>=6.47.0",
]

[tool.pdm.scripts]
main = "python -m asn2rflx"
test = "pytest -n auto tests/"
fmt = "black ."

[tool.mypy]
python_version = 3.9
